# opencode-limits

./: Cargo.toml
src/: main.rs  types.rs
