[package]
name = "opencode-limits"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oclm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
ratatui = "0.29"
crossterm = "0.28"
